# Qt-ScreenShot

./: README.md  使用git管理项目.md
Qt_ScreenShot_final/: Annotation.qml  CMakeLists.txt  Dialogs.qml  Gif.h  MainContent.qml  MessageBox.qml  RecScreen.h  capture.cpp  capture.h  copypaintitem.cpp  copypaintitem.h  elementgroup.h  filter.cpp  filter.h  form2.ui  freecapture.cpp  freecapture.h  gifwidget.cpp  gifwidget.h  longshot.cpp  longshot.h  main.cpp  main.qml  mosaic.h  mylabel.cpp  mylabel.h  painteditem.cpp  painteditem.h  qml.qrc  recscreen.cpp  share.cpp  share.h  ui_form.h  ui_form2.h  ui_mosaic.h
ScreenShot/: Annotation.qml  Button.h  CutImageRect.qml  FocusRect.qml  Gif.h  MainContent.qml  MessageBox.qml  RecScreen.h  ScreenShot.pro  capture.cpp  capture.h  copypainteditem.h  copypaintitem.cpp  copypaintitem.h  edit.cpp  edit.h  elementgroup.h  filter.cpp  filter.h  filter.ui  form.ui  freecapture.cpp  freecapture.h  gifwidget.cpp  imgprovider.h  longshot.cpp  longshot.h  main.cpp  main.qml  mosaic.cpp  mosaic.h  mylabel.cpp  mylabel.h  painteditem.cpp  painteditem.h  paintitem.cpp  paintitem.h  qml.qrc  recscreen.cpp  share.cpp  (+3 more)
